--- a/src/main/resources/templates/help/help.html
+++ b/src/main/resources/templates/help/help.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../../static/css/help/help.css" />
+        <link rel="stylesheet" href="/css/help/help.css" />
         <link
             rel="icon"
             type="image/x-icon"
@@ -16,26 +16,18 @@
             <div class="header-container">
                 <div class="header">
                     <div class="help-logo">
-                        <a href="https://www.loud.kr/" target="_blank">
+                        <a href="/help/" target="_blank">
                             <img
                                 src="https://help.loud.kr/hc/theming_assets/01HZKZ8AF22DN6ZA42CE4143EF"
                                 alt="온정 고객센터 페이지"
                             />
                         </a>
                         <span>
-                            <a
-                                title="고객센터 홈"
-                                href="https://help.loud.kr/hc/ko"
-                                >고객센터</a
-                            >
+                            <a title="고객센터 홈" href="/help/">고객센터</a>
                         </span>
                     </div>
                     <div class="go-to-write-button-container">
-                        <a
-                            href="https://help.loud.kr/hc/ko/requests/new"
-                            class="go-to-write-button"
-                            >문의하기</a
-                        >
+                        <a href="/help/write" class="go-to-write-button">문의하기</a>
                     </div>
                 </div>
             </div>
@@ -357,5 +349,5 @@
             </section>
         </main>
     </body>
-    <script src="../../static/js/help/help.js"></script>
+    <script src="/static/js/help/help.js"></script>
 </html>
