--- a/src/main/resources/templates/help/help-write.html
+++ b/src/main/resources/templates/help/help-write.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../../static/css/help/help-write.css" />
+        <link rel="stylesheet" href="/css/help/help-write.css" />
         <link
             rel="icon"
             type="image/x-icon"
@@ -31,11 +31,8 @@
                         </span>
                     </div>
                     <div class="go-to-write-button-container">
-                        <a
-                            href="https://help.loud.kr/hc/ko/requests/new"
-                            class="go-to-write-button"
-                            >문의하기</a
-                        >
+                        <a href="/help/write" class="go-to-write-button">문의하기</a>
+
                     </div>
                 </div>
             </div>
@@ -214,5 +211,5 @@
             </div>
         </main>
     </body>
-    <script src="../../static/js/help/help-write.js"></script>
+    <script src="/js/help/help-write.js"></script>
 </html>
