--- a/src/main/resources/templates/help/help.html
+++ b/src/main/resources/templates/help/help.html
@@ -16,14 +16,14 @@
             <div class="header-container">
                 <div class="header">
                     <div class="help-logo">
-                        <a href="/help/" target="_blank">
+                        <a href="/help/help" target="_blank">
                             <img
-                                src="https://help.loud.kr/hc/theming_assets/01HZKZ8AF22DN6ZA42CE4143EF"
-                                alt="온정 고객센터 페이지"
+                                    src="https://help.loud.kr/hc/theming_assets/01HZKZ8AF22DN6ZA42CE4143EF"
+                                    alt="온정 고객센터 페이지"
                             />
                         </a>
                         <span>
-                            <a title="고객센터 홈" href="/help/">고객센터</a>
+                            <a title="고객센터 홈" href="/help/help">고객센터</a>
                         </span>
                     </div>
                     <div class="go-to-write-button-container">
