--- a/src/main/resources/templates/help/help-write.html
+++ b/src/main/resources/templates/help/help-write.html
@@ -16,7 +16,7 @@
             <div class="header-container">
                 <div class="header">
                     <div class="help-logo">
-                        <a href="https://www.loud.kr/" target="_blank">
+                        <a href="/help/help">
                             <img
                                 src="https://help.loud.kr/hc/theming_assets/01HZKZ8AF22DN6ZA42CE4143EF"
                                 alt="온정 고객센터 페이지"
@@ -25,14 +25,13 @@
                         <span>
                             <a
                                 title="고객센터 홈"
-                                href="https://help.loud.kr/hc/ko"
+                                href="/help/help"
                                 >고객센터</a
                             >
                         </span>
                     </div>
                     <div class="go-to-write-button-container">
                         <a href="/help/write" class="go-to-write-button">문의하기</a>
-
                     </div>
                 </div>
             </div>
@@ -44,7 +43,7 @@
                     <nav class="sub-nav">
                         <ol class="breadcrumbs">
                             <li title="온정 고객센터">
-                                <a href="https://help.loud.kr/hc/ko"
+                                <a href="/help/help"
                                     >온정 고객센터</a
                                 >
                             </li>
