결제 생성 중

--- a/src/main/resources/templates/mypage/mypage-profile-edit.html
+++ b/src/main/resources/templates/mypage/mypage-profile-edit.html
@@ -6,7 +6,7 @@
         <title>Onjung-프로필 수정</title>
         <link
             rel="stylesheet"
-            href="../../static/css/mypage/mypage-profile-edit.css"
+            href="/css/mypage/mypage-profile-edit.css"
         />
 
         <style>
@@ -312,5 +312,5 @@
             </div>
         </div>
     </body>
-    <script src="../../static/js/mypage/mypage-profile-edit.js"></script>
+    <script src="/js/mypage/mypage-profile-edit.js"></script>
 </html>
