--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -9,8 +9,6 @@
         <link rel="stylesheet" href="/css/rank/rank.css" />
     </head>
     <body>
-    <h1 th:text="'안녕하세요, ' + ${member.memberName} + '님!'"></h1>
-    <p th:text="'로그인 유형: ' + ${loginType}"></p>
 
     <div id="root">
             <div id="app" class="bfedap app">
@@ -656,8 +654,7 @@
                                                                     </div>
                                                                     <img
                                                                         class="hkaqym banner-web-image"
-                                                                        src="/images/banner9.jpg
-                                                                        "
+                                                                        src="/images/banner9.jpg"
                                                                     />
                                                                 </div>
                                                             </a>
@@ -695,7 +692,6 @@
                                                     <div class="filters">
                                                         <label
                                                             class="date-input date-range"
-                                                            for="input"
                                                             ><div
                                                                 class="react-datepicker-wrapper"
                                                             >
