--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -371,8 +371,8 @@
                                                                             class="fpiAVl tooltip"
                                                                         ></div>
                                                                     </div>
-                                                                    <div class="h1 career-info-content">
-                                                                        <span id="memberPoint"></span> 포인트
+                                                                    <div class="h1 career-info-content" style="font-size: 21px">
+                                                                        <span id="memberPoint"></span>
                                                                     </div>
                                                                 </div>
                                                                 <div
