--- a/src/main/resources/templates/review/review-write.html
+++ b/src/main/resources/templates/review/review-write.html
@@ -52,9 +52,9 @@
                                     <label class="company-name">
                                         <input
                                                 type="text"
-                                                placeholder="제목"
+                                                placeholder="봉사 단체명"
                                                 maxlength="19"
-                                                name="postTitle"
+                                                name="vtGroupName"
                                                 value=""
                                                 oninput="updateCharCount(this)"
                                         />
@@ -92,7 +92,7 @@
                                     <textarea
                                             placeholder="실제로 한 봉사 내용을 명확하고 간략하게 작성해주세요.
 ex) 경로식당 배식 봉사"
-                                            name="postContent"
+                                            name="postSummary"
                                             maxlength="300"
                                     ></textarea>
                                     </label>
@@ -112,7 +112,7 @@ ex) 경로식당 배식 봉사"
                                 <textarea
                                         id="briefing"
                                         aria-hidden="true"
-                                        name="postSummary"
+                                        name="postContent"
                                         placeholder="봉사활동 후기를 등록해주세요!"
                                 ></textarea>
 
@@ -120,7 +120,6 @@ ex) 경로식당 배식 봉사"
                                             id="multipulfile-briefing"
                                             type="file"
                                             multiple=""
-                                            name="postContent"
                                             accept="image/jpeg, image/jpg, image/png, image/webp"
                                             hidden=""
                                     />
@@ -143,7 +142,7 @@ ex) 경로식당 배식 봉사"
                                                 type="file"
                                                 id="drop-zone-input"
                                                 class="attach-file-zone2"
-                                                name=""
+                                                name="file"
                                         /><svg
                                             viewBox="0 0 24 24"
                                             class="attach-file-img"
@@ -196,7 +195,7 @@ ex) 경로식당 배식 봉사"
                                     <input
                                             type="radio"
                                             id="star5"
-                                            name="rating"
+                                            name="review_star_rate"
                                             value="5"
                                     />
                                     <label for="star5" title="5 stars"
@@ -205,7 +204,7 @@ ex) 경로식당 배식 봉사"
                                     <input
                                             type="radio"
                                             id="star4"
-                                            name="rating"
+                                            name="review_star_rate"
                                             value="4"
                                     />
                                     <label for="star4" title="4 stars"
@@ -214,7 +213,7 @@ ex) 경로식당 배식 봉사"
                                     <input
                                             type="radio"
                                             id="star3"
-                                            name="rating"
+                                            name="review_star_rate"
                                             value="3"
                                     />
                                     <label for="star3" title="3 stars"
@@ -223,7 +222,7 @@ ex) 경로식당 배식 봉사"
                                     <input
                                             type="radio"
                                             id="star2"
-                                            name="rating"
+                                            name="review_star_rate"
                                             value="2"
                                     />
                                     <label for="star2" title="2 stars"
@@ -232,7 +231,7 @@ ex) 경로식당 배식 봉사"
                                     <input
                                             type="radio"
                                             id="star1"
-                                            name="rating"
+                                            name="review_star_rate"
                                             value="1"
                                     />
                                     <label for="star1" title="1 star"
@@ -245,7 +244,7 @@ ex) 경로식당 배식 봉사"
                             </div>
                         </div>
                         <div class="submit-button-container">
-                            <button id="submit-review" class="submit-button">
+                            <button id="submit-review" class="submit-button" type="submit">
                                 작성 완료
                             </button>
                         </div>
