--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -147,7 +147,7 @@
                                                                 <a
                                                                     href="#"
                                                                     class="side-baner-content"
-                                                                    onclick="showTab('donaition', this)"
+                                                                    onclick="showTab('donation', this)"
                                                                     >기부
                                                                     내역</a
                                                                 >
@@ -925,7 +925,7 @@
                                                 </div>
                                                 <!-- 기부 내역 -->
                                                 <div
-                                                    id="donaition"
+                                                    id="donation"
                                                     class="profile-contents-box-wrap tab-content"
                                                 >
                                                     <main
@@ -1111,7 +1111,7 @@
                                                                                 전체
                                                                             </div>
                                                                             <label
-                                                                                id="donaition-totalCount"
+                                                                                id="donation-totalCount"
                                                                                 class="ezikFA"
                                                                                 >0</label
                                                                             >
@@ -1124,8 +1124,8 @@
                                                             class="content-inner"
                                                         >
                                                             <div
-                                                                id="donaition-list"
-                                                                class="donaition-list"
+                                                                id="donation-list"
+                                                                class="donation-list"
                                                                 style="
                                                                     display: block;
                                                                 "
