--- a/src/main/resources/templates/volunteer/volunteer-list.html
+++ b/src/main/resources/templates/volunteer/volunteer-list.html
@@ -137,20 +137,15 @@
                                                 </svg>
                                             </div>
                                             <div class="bottom-wrap">
-                                                <div
-                                                    width="100%"
-                                                    height="8px"
-                                                    class="bottom-drop-down"
-                                                ></div>
+                                                <div width="100%" height="8px" class="bottom-drop-down"></div>
                                                 <div class="list-wrap">
-                                                    <div class="item active">
+                                                    <div class="item active" onclick="sortList('recent')">
                                                         최신등록순
                                                     </div>
-
-                                                    <div class="item">
+                                                    <div class="item" onclick="sortList('viewCount')">
                                                         조회순
                                                     </div>
-                                                    <div class="item">
+                                                    <div class="item" onclick="sortList('endingSoon')">
                                                         마감임박순
                                                     </div>
                                                 </div>
