--- a/src/main/resources/templates/help/help-notification-inquiry.html
+++ b/src/main/resources/templates/help/help-notification-inquiry.html
@@ -161,7 +161,7 @@
         </main>
     </body>
     <script th:inline="javascript">
-        const posts = [[${posts}]];
+        const notices = [[${notices}]];
         const search = [[${search}]];
     </script>
     <script src="/js/help/help-notification-inquiry.js"></script>
