--- a/src/main/resources/templates/help/help-notification-list.html
+++ b/src/main/resources/templates/help/help-notification-list.html
@@ -125,7 +125,7 @@
         </main>
     </body>
     <script th:inline="javascript">
-        const posts = [[${posts}]];
+        const notices = [[${notices}]];
         const pagination = [[${pagination}]];
         const search = [[${search}]];
     </script>
