--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,15 +1,15 @@
-body {
-    line-height: 1.3;
-    word-break: keep-all;
-    color: #343a40;
-    font-family: pretendard, -apple-system, blinkmacsystemfont, system-ui,
-    roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo",
-    "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji",
-    "Segoe UI Symbol", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    overflow-wrap: break-word;
-}
+/*body {*/
+/*    line-height: 1.3;*/
+/*    word-break: keep-all;*/
+/*    color: #343a40;*/
+/*    font-family: pretendard, -apple-system, blinkmacsystemfont, system-ui,*/
+/*    roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo",*/
+/*    "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji",*/
+/*    "Segoe UI Symbol", sans-serif;*/
+/*    font-size: 16px;*/
+/*    font-weight: 400;*/
+/*    overflow-wrap: break-word;*/
+/*}*/
 *,
 :after,
 :before {
